Kubernetes/podrails/servicerails.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-rails-service
spec:
  loadBalancerIP: 192.168.0.15
  type: LoadBalancer
  selector:
    app: web-ui-rails
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
