Kubernetes/podrails/networkpolicyrails.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rails_network_policy
spec:
  podSelector:
    matchLabels:
      app: web-ui-rails
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - ports:
    - port: 8080
    from:
    - podSelector:
        matchLabels:
          role: network_monitoring
  egress:
  - to:
    - ipBlock:
        cidr: 10.109.130.0/24
    ports:
      - protocol: TCP
        port: 5432
      - protocol: TCP
        port: 6379
